# akantu5

./: .codeclimate.yml  .editorconfig  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pypirc  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CTestConfig.cmake  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  setup.py
.gitlab-ci.d/: code-quality.yaml  images.yaml  templates.yaml
.ssh/: id_rsa  id_rsa.pub
cmake/: AkantuCPack.cmake  AkantuCPackMacros.cmake  AkantuCleaning.cmake  AkantuConfig.cmake.in  AkantuExampleMacros.cmake  AkantuExtraCompilationProfiles.cmake  AkantuInstall.cmake  AkantuMacros.cmake  AkantuNeedPybind11.cmake  AkantuPackagesSystem.cmake  AkantuSimulationMacros.cmake  AkantuTestsMacros.cmake  AkantuUse.cmake  akantu_install_environement.csh.in  akantu_install_environement.sh.in  akantu_test_driver.sh  git_info  material_lister.cc  semver.py
cmake/Modules/: CMakeDebugMessages.cmake  CMakeDetermineCCompiler.cmake  CMakeDetermineCompiler.cmake  CMakeFlagsHandling.cmake  CMakePackagesSystem.cmake  CMakePackagesSystemGlobalFunctions.cmake  CMakePackagesSystemPrivateFunctions.cmake  CMakeVersionGenerator.cmake  FindGMSH.cmake  FindMETIS.cmake  FindMumps.cmake  FindPETSc.cmake  FindPTScotch.cmake  FindParMETIS.cmake  FindScaLAPACK.cmake  FindScotch.cmake
cmake/libakantu/: __init__.py
doc/: CMakeLists.txt
doc/dev-doc/: CMakeLists.txt  akantu.dox.j2  conf.py  index.rst  reference.rst  requirements.txt
doc/dev-doc/manual/: bibliography.rst  conf.py  constitutive-laws.rst  contactmechanicsmodel.rst  getting_started.rst  heattransfermodel.rst  io.rst  manual-bibliography.bib  phasefieldmodel.rst  structuralmechanicsmodel.rst
doc/manual/: CMakeLists.txt  manual-contactmechanicsmodel.tex
examples/: CMakeLists.txt
examples/boundary_conditions/: CMakeLists.txt
examples/boundary_conditions/python_user_defined_bc/: CMakeLists.txt  boundary_condition.py  python_user_defined_bc.cc
examples/cohesive_element/: CMakeLists.txt
examples/contact_mechanics/: CMakeLists.txt  cohesive-contact.geo  cohesive_contact_explicit_dynamic.cc  contact_explicit_dynamic.cc  contact_explicit_static.cc  hertz.geo
examples/embedded/: CMakeLists.txt  embedded.cc
examples/explicit/: CMakeLists.txt  explicit_dynamic.cc
examples/heat_transfer/: CMakeLists.txt  heat_transfer_dynamics_2d.cc  heat_transfer_dynamics_3d.cc  heat_transfer_static_2d.cc
examples/implicit/: CMakeLists.txt  implicit_dynamic.cc
examples/io/: CMakeLists.txt
examples/new_material/: CMakeLists.txt  local_material_damage.cc  local_material_damage.hh  local_material_damage_inline_impl.hh  new_local_material.cc
examples/parallel/: CMakeLists.txt  parallel_2d.cc
examples/phase_field/: CMakeLists.txt  phase_field_notch.cc
examples/python/: CMakeLists.txt
examples/python/cohesive/: CMakeLists.txt  plate.py
examples/python/contact-mechanics/: CMakeLists.txt  compression.geo  compression.py  detection-explicit.msh  detection-explicit.py
examples/python/custom-material/: CMakeLists.txt  bi-material.py  custom-material.py
examples/python/dynamics/: CMakeLists.txt  dynamics.py
examples/python/eigen_modes/: CMakeLists.txt  eigen_modes.py  image_saver.py
examples/python/fragmentation/: CMakeLists.txt  fragmentation.py
examples/python/phase-field/: CMakeLists.txt  phasefield-dynamic.py  phasefield-static.py  plate.geo  plate_static.geo
examples/python/plate-hole/: CMakeLists.txt  plate.py
examples/python/solver_callback/: CMakeLists.txt  bar.geo  solver_callback.py
examples/python/stiffness_matrix/: CMakeLists.txt  stiffness_matrix.py
examples/python/structural_mechanics/: CMakeLists.txt  structural_mechanics.py  structural_mechanics_dynamics.py  structural_mechanics_softening.py
examples/static/: CMakeLists.txt  static.cc
examples/structural_mechanics/: CMakeLists.txt  bernoulli_beam_2_example.cc
extra_packages/extra-materials/: package.cmake
extra_packages/igfem/: package.cmake
extra_packages/traction-at-split-node-contact/: README.txt  package.cmake
python/: CMakeLists.txt  py_aka_array.hh  py_aka_common.cc  py_aka_common.hh  py_aka_error.cc  py_aka_error.hh  py_akantu.cc  py_akantu.hh  py_akantu_pybind11_compatibility.hh  py_boundary_conditions.cc  py_boundary_conditions.hh  py_contact_mechanics_model.cc  py_contact_mechanics_model.hh  py_dof_manager.cc  py_dof_manager.hh  py_dumpable.cc  py_dumpable.hh  py_fe_engine.cc  py_fe_engine.hh  py_fragment_manager.cc  py_fragment_manager.hh  py_group_manager.cc  py_group_manager.hh  py_heat_transfer_model.cc  py_heat_transfer_model.hh  py_integration_scheme.cc  py_integration_scheme.hh  py_material.cc  py_material.hh  py_material_selector.cc  py_material_selector.hh  py_mesh.cc  py_mesh.hh  py_model.cc  py_model.hh  py_model_couplers.cc  py_model_couplers.hh  py_parser.cc  py_parser.hh  py_phase_field_model.cc  (+9 more)
python/akantu/: __init__.py
src/: CMakeLists.txt
src/common/: aka_array.cc  aka_array.hh  aka_array_filter.hh  aka_array_printer.hh  aka_array_tmpl.hh  aka_bbox.hh  aka_blas_lapack.hh  aka_circular_array.hh  aka_circular_array_inline_impl.hh  aka_common.cc  aka_common.hh  aka_common_inline_impl.hh  aka_config.cc.in  aka_config.hh.in  aka_csr.hh  aka_element_classes_info_inline_impl.hh  aka_enum_macros.hh  aka_error.cc  aka_error.hh  aka_event_handler_manager.hh  aka_extern.cc  aka_factory.hh  aka_fwd.hh  aka_grid_dynamic.hh  aka_math.cc  aka_math.hh  aka_math_tmpl.hh  aka_named_argument.hh  aka_random_generator.hh  aka_safe_enum.hh  aka_types.hh  aka_voigthelper.cc  aka_voigthelper.hh  aka_voigthelper_tmpl.hh  aka_warning.hh  aka_warning_restore.hh
src/fe_engine/: cohesive_element.hh  element.hh  element_class.hh  element_class_helper.hh  element_class_structural.hh  element_class_tmpl.hh  element_type_conversion.hh  fe_engine.cc  fe_engine.hh  fe_engine_inline_impl.hh  fe_engine_template.hh  fe_engine_template_cohesive.cc  fe_engine_template_tmpl.hh  fe_engine_template_tmpl_field.hh  fe_engine_template_tmpl_struct.hh  integrator.hh  (+21 more)
test/: CMakeLists.txt  test_gtest_main.cc  test_gtest_utils.hh
(+844 files in other folders)
